--- a/src/components/typography.css
+++ b/src/components/typography.css
@@ -40,3 +40,11 @@
 .white-text{
     color: #FFFFFF;
 }
+
+.bg-purple{
+    background-color: #5F2EEA;
+}
+
+.ticket-results-border{
+    border-radius: 10px;
+}
