--- a/src/components/movie-image.css
+++ b/src/components/movie-image.css
@@ -24,6 +24,12 @@
     border-radius: 6px;
 }
 
+.admin-page-movie-image{
+    height: 272px;
+    width: auto;
+    border-radius: 6px;
+}
+
 .margin-col-description{
     margin-left: 120px;
 }
